Ctrlproxy 2.6:
 * Several bugs in log_custom fixed (thanks, igla)
 * Fix build without libssl
 * Add attribute only_noclient
 * Add linestack support
 * Split repl_memory into linestack_memory and repl_simple
 * Add linestack_file
 * Add repl_command
 * Added function plugin_loaded()
 * Admin commands can now be executed by /CTRLPROXY
 * Executing admin commands by sending them to the nick 'ctrlproxy' is now
 optional

Ctrlproxy 2.5:
 * Added configuration example for log_custom
 * Fixed log_custom (works correct and with multiple files now!)
 * Fix in personal nick MODE replication
 * Fix bug in ignore_first_nickchange
 * Add DIE command to admin module
 * Correctly handle MODE +o and +v
 * Correctly disconnect from server on exit
 * Only add mode if mode is either @ or + in replication
 * Sockets are now correctly closed when exiting
 * Fix double loading bug in stats module
 * Add ability to ignore first NICK command the user executes
 * Fix daemon mode
 * Print backtrace on crash
 * Fix parsing of MODE +b and -b
 * Add antiflood module
 * Add function to unregister transports
 * Add log_custom module that can be used for logging in a self-defined
 format.
 * Update plugin API to include data pointer that can be used by backend
 * Add fini_plugin() function to all modules (RELOADMODULE and UNLOADMODULE
    should work correctly now)
 * Fix bug in strip.c when client disconnects before answer to query arrives
 * Don't send MODE if nothing set
 * Fix synchronisation bug in strip module
 * Support multiple arguments to KICK
 * Add nickserv module
 * Add support to log_irssi for TOPIC, QUIT, NICK and KICK
 * Fix support in log_irssi for MODE
 * Fix bug where xchat does not show first letter of last argument
 * Fix documentation build and installation system
 * Fix bug in reconnect after the connection to the server was lost
 * Only send PRIVMSG and NOTICE messages to fellow clients
 * Don't crash when nick can't be found in channel when setting MODE

Ctrlproxy 2.4: