@@ -5,3 +5,4 @@ Barnaba Marcello <vjt@users.sf.net>, original author of network-openssl.c
 Wilmer van der Gaast <lintux@debian.org> (debian package)
 Aron Griffis <agriffis@gentoo.org> (gentoo package, bug reports)
 mibukyoshiro@altern.org (bug reports)
+'igla' at #ctrlproxy (bug reports)
